--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "morgan": "~1.9.1",
     "passport": "~0.2.0",
     "passport-local": "~1.0.0",
-    "pug": "2.0.0-beta11"
+    "pug": "2.0.0-beta11",
+    "clean-css": ">=4.1.11"
   },
   "devDependencies": {
     "nodemon": "1.18.4"
