login,register and feed page logic done

--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "dependencies": {
     "bcrypt-nodejs": "0.0.3",
     "bluebird": "3.7.1",
+    "clean-css": ">=4.1.11",
     "connect-flash": "^0.1.1",
     "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
@@ -20,8 +21,7 @@
     "morgan": "~1.9.1",
     "passport": "~0.2.0",
     "passport-local": "~1.0.0",
-    "pug": "2.0.0-beta11",
-    "clean-css": ">=4.1.11"
+    "pug": "2.0.0-beta11"
   },
   "devDependencies": {
     "nodemon": "1.18.4"
