--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "express-session": "^1.17.1",
     "express-validator": "6.2.0",
     "http-errors": "~1.6.3",
+    "materialize": "^1.0.0",
     "mongoose": "^5.3.14",
     "morgan": "~1.9.1",
     "passport": "~0.2.0",
